# egglord

./: README.md  pyproject.toml  setup.py
egglord/: __init__.py  egglord.py
